--- a/index.html
+++ b/index.html
@@ -76,6 +76,19 @@
 							<div id="projects">
 							<h1>Projects</h1>
 							<section class="tiles">
+								
+								<article class="style4">
+									<span class="image">
+										<img src="images/pic04.jpg" alt="" />
+									</span>
+									<a href="https://codepen.io/sahanijabir/full/dyNegjp" target="_blank">
+										<h2>Technical Documentation Page</h2>
+										<div class="content">
+											<hr>
+											<p>A Technical documentation page with html, css using media query</p>
+										</div>
+									</a>
+								</article>
 
 								<article class="style3">
 									<span class="image">
@@ -122,17 +135,7 @@
 
 								<!--
 
-								<article class="style4">
-									<span class="image">
-										<img src="images/pic04.jpg" alt="" />
-									</span>
-									<a href="generic.html">
-										<h2>Tempus</h2>
-										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
-										</div>
-									</a>
-								</article>
+								
 								<article class="style5">
 									<span class="image">
 										<img src="images/pic05.jpg" alt="" />
