--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
 							<ul class="icons">
 								<li><a href="https://linkedin.com/in/jabirsahani" target="_blank" class="icon brands style2 fa-linkedin-in">
 									<span class="label">Linkedin</span></a></li>
-								<li><a href="https://github.com/ " target="_blank" class="icon brands style2 fa-github"><span class="label">GitHub</span></a></li>
+								<li><a href="https://github.com/SahaniJabir" target="_blank" class="icon brands style2 fa-github"><span class="label">GitHub</span></a></li>
 								<li><a href="mailto:jabirsahani@gmail.com" class="icon solid style2 fa-envelope"><span class="label">Email</span></a></li>
 							</ul>
 						</section>
